style.css
:root {
    --clr-accent: hsl(263, 55%, 52%);
    --clr-primary-100: hsl(210, 46%, 95%);
    --clr-primary-500: hsl(217, 19%, 35%);
    --clr-primary-900: hsl(219, 29%, 14%);
    
    --clr-neutral-100: hsl(0, 0%, 100%);
    --clr-neutral-200: hsl(0, 0%, 81%);

    --fw-regular: 500;
    --fw-semi-bold: 600:
}

/* Style helper class */

.bg-accent {
    background-color: var(--clr-accent);
}

.bg-primary-100 {
    background-color: var(--clr-primary-100);
}

.bg-primary-500 {
    background-color: var(--clr-primary-500);
}

.bg-primary-900 {
    background-color: var(--clr-primary-900);
}

.bg-neutral-100 {
    background-color: var(--clr-neutral-100);
}

.opacity-50 {
    opacity: 0.5;
}

.opacity-70 {
    opacity: 0.7;
}

.txt-light {
    color: var(--clr-neutral-100);
}

.txt-dark {
    color: var(--clr-primary-500);
}

/* Custom CSS */

body {
    font-family: 'Barlow Semi Condensed', sans-serif;
    font-size: 13px;
    font-weight: var(--fw-regular);
    background: var(--clr-primary-100);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-grid {
    display: grid;
    gap: 1.5rem;
    padding: 1.5rem;
}

.testimonial {
    display: grid;
    grid-template-rows: auto auto auto;
    gap: 1rem;
    border-radius: 0.5rem;
    padding: 1.5rem 2rem 2rem 2rem;
    box-shadow: 10px 10px 30px var(--clr-neutral-200);
}

.testimonial h2 {
    font-size: 1.56em;
    line-height: normal;
    font-weight: var(--fw-semi-bold);
}

.main-grid .testimonial:first-child{
    background-image: url("images/bg-pattern-quotation.svg");
    background-repeat: no-repeat;
    background-position: 90% top;
}

.testimonial__profile {
    display: grid;
    column-gap: 1rem;
    grid-template: 1rem 1rem / auto auto;
    justify-content: start;
    font-size: 0.7rem;
}

.testimonial__profile img {
    grid-row: 1 / span 2;
    height: 100%;
    border-radius: 50%;
}

.testimonial:nth-child(1){
    .testimonial__profile img {
        border: 2px solid rgba(255,255,255,0.5);
    }
}

.testimonial:nth-child(4){
    .testimonial__profile img {
        border: 2px solid var(--clr-accent);
    }
}


.attribution {
    text-align: center;
    color: var(--clr-neutral-200);
    padding: 0.5rem;
}

.attribution a{
    color: inherit;
}

.attribution a:hover {
    color: var(--clr-accent);
}

@media screen and (min-width:775px) and (max-width:1149px){
    .main-grid{
        grid-template: repeat(4, auto) / repeat(4,1fr);
    }

    .main-grid .testimonial:nth-child(1){
        grid-row: 1;
        grid-column: span 4;
    }

    .main-grid .testimonial:nth-child(2){
        grid-row: 2;
        grid-column: span 2;
    }
    

    .main-grid .testimonial:nth-child(3){
        grid-row: 2;
        grid-column: span 2;
    }

    .main-grid .testimonial:nth-child(4){
        grid-row: 3;
        grid-column: span 4;
    }

    .main-grid .testimonial:nth-child(5){
        grid-row: 4;
        grid-column: span 4;
    }
}

@media screen and (min-width:1150px){
    .main-grid{
        max-width: 1150px;
        grid-template: auto auto/ repeat(4, 1fr);
    }

    .main-grid .testimonial:nth-child(1){
        grid-column-end: span 2;
    }

    .main-grid .testimonial:nth-child(3){
        grid-row: 2;
    }

    .main-grid .testimonial:nth-child(4){
        grid-row: 2;
        grid-column: 2 /span 2;
    }

    .main-grid .testimonial:nth-child(5){
        grid-row-end: span 2;
    }
}

